<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unit Converter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="km">km</string>
    <string name="kg">kg</string>
    <string name="miles">miles</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="lbs">lbs</string>
    <string name="convertto">To:</string>
    <string name="convertfrom">Convert From</string>

</resources>
