<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UnitConverter" >

    <EditText
        android:id="@+id/inputTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/result"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:inputType="numberSigned" />


    <RadioGroup
        android:id="@+id/us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/inputTextbox" >

        <RadioButton
            android:id="@+id/miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="get_data"
            android:text="@string/miles" />

        <RadioButton
            android:id="@+id/lbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="get_data"
            android:text="@string/lbs" />

        <RadioButton
            android:id="@+id/F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="get_data"
            android:text="@string/f" />

        <RadioButton
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="get_data"
            android:text="@string/km" />

        <RadioButton
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="get_data"
            android:text="@string/kg" />

        <RadioButton
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="get_data"
            android:text="@string/c" />
    </RadioGroup>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        
        android:text="@string/convertfrom" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result"
        android:layout_alignLeft="@+id/result"
        android:layout_marginBottom="48dp"
        android:text="@string/convertto" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/result"
        android:layout_alignLeft="@+id/us"
        android:layout_marginLeft="19dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>